新增RestAssured集成测试 + test container